# livedelta

./: .dockerignore  .env.dchannel.example  .env.dcv2.example  .env.dcv2sim.example  .env.dcv3.example  .env.example  .env.heikinashi.example  .env.revbreak.example  .gitignore  Dockerfile  README.md  ashish.pine  ashish_strategy.pine  btc_heikinashi_strategy_single_candle_trail.pine  dchannel_strategy.pine  dcv2_strategy.pine  docker-compose.yml  pyproject.toml  revbreak_strategy.pine
deploy/: bootstrap.sh  deltabot.service
scripts/: backtest_claudebuy.py  backtest_claudebuy_options.py  backtest_claudebuy_optpattern.py  backtest_claudebuy_st.py  backtest_dchannel.py  backtest_dcv2.py  backtest_heikin_ashi.py  backtest_options.py  backtest_pinebtc.py  backtest_revbreak.py  check_auth.py  check_option_chain.py  export_trades.py
src/deltabot/: __init__.py  cli.py  config.py  enums.py  logging_setup.py  main.py  models.py  pnl.py  scheduler.py
src/deltabot/backtest/: data_loader.py  engine.py  metrics.py  option_pricing.py
src/deltabot/core/: candle_aggregator.py  dchannel_trader.py  dcv2_trader.py  dcv3_trader.py  heikin_ashi_trader.py  reconciler.py  (+6 more)
tests/: conftest.py  test_backtest_engine.py  test_candle_aggregator.py  test_dchannel.py  test_dchannel_trader.py  test_dcv2.py  test_dcv2_trader.py  test_dcv3_trader.py  test_heikin_ashi.py  test_heikin_ashi_trader.py  test_indicators.py  test_options_executor.py  test_options_leverage.py  test_paper_mode.py  test_pine_strategy.py  test_revbreak_intracandle.py  test_signer.py  test_state_machine.py  test_supertrend.py
(+11 files in other folders)
