[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deltabot"
version = "0.1.0"
description = "Delta Exchange BTC perpetual intraday trend bot (prev-day OHLC + Supertrend + EMA H/L)"
requires-python = ">=3.12"
dependencies = [
    "delta-rest-client>=1.0.14",
    "websockets>=12.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "APScheduler>=3.10",
    "tzdata>=2024.1",  # IANA tz database for zoneinfo (Windows has no system tzdata)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
deltabot = "deltabot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
